# pcsc

./: CMakeLists.txt  README.md
codes_in_textbook/: CMakeLists.txt
codes_in_textbook/chapter-05/: pointers_as_function_arguments.cpp
codes_in_textbook/chapter-06/: Book.cpp  Book.hpp  CMakeLists.txt
codes_in_textbook/chapter-07/: AbstractOdeSolver.hpp
codes_in_textbook/chapter-08/: CMakeLists.txt  DoubleVector.hpp  GetMaximum.cpp  UseDoubleVector.cpp  UseStdVector.cpp
codes_in_textbook/chapter-09/: Exception.cpp  using_exceptions.cpp
exercises/: CMakeLists.txt
exercises/chapter-01/: CMakeLists.txt  ch-01-ex-01.cpp  ch-01-ex-02.cpp  ch-01-ex-04.cpp  ch-01-ex-05.cpp  ch-01-ex-06.cpp  ch-01-ex-07.cpp
exercises/chapter-03/: ch-03-ex-01.cpp
exercises/chapter-04/: ch-04-ex-01.cpp  ch-04-ex-02.cpp  ch-04-ex-03.cpp  ch-04-ex-04.cpp  ch-04-ex-05.cpp
exercises/chapter-05/: ch-05-ex-01.cpp  ch-05-ex-02.cpp  ch-05-ex-03.cpp  ch-05-ex-04.cpp  ch-05-ex-05.cpp
exercises/chapter-06/: CMakeLists.txt  ch-06-ex-01.cpp  ch-06-ex-01.hpp  ch-06-ex-02.cpp  ch-06-ex-02.hpp
exercises/chapter-07/: AbstractOdeSolver.cpp  AbstractOdeSolver.hpp  CMakeLists.txt  ForwardEulerMethod.hpp  ForwardEulerSolver.cpp  ch-07-ex-01.cpp  ch-07-ex-01.hpp  ch-07-ex-02.cpp  ch-07-ex-03.cpp  graduate_student.cpp  graduate_student.hpp  phd_student.cpp  phd_student.hpp  university_student.cpp  university_student.hpp
exercises/chapter-08/: CMakeLists.txt  ComplexNumber.cpp  ComplexNumber.hpp  Point2d.cpp  Point2d.hpp  ProbabilityOfRain.hpp  ch-08-ex-01.cpp  ch-08-ex-02.cpp  ch-08-ex-03.cpp  ch-08-ex-04.cpp
exercises/chapter-09/: Exception.cpp  Exception.hpp  FileNotOpenException.cpp  FileNotOpenException.hpp  OutOfRangeException.cpp  OutOfRangeException.hpp  ch-09-ex-01.cpp
exercises/exo-gdb-sources/: alloc.cc
lectures/: CMakeLists.txt
lectures/week2/code_snippets/: CMakeLists.txt  (+1 more)
solutions/: CMakeLists.txt
solutions/chapter-04/: CMakeLists.txt  alloc.cpp  ch-04-ex-01.cpp  fpe.cpp
solutions/chapter-08/: exo-templates-solution.cpp
work/: CMakeLists.txt
work/exo-eigen/: CMakeLists.txt  solving_linear_system.cpp  wrapping.cpp
work/exo-stl/: memory_management.cpp  standard_algorithms.cpp  std_map_and_std_set.cpp  std_vector.cpp
work/exo-templates/: Box.hpp  CMakeLists.txt  any.cpp  box.cpp
(+19 files in other folders)
